--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.19.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4",
-    "prisma": "^5.19.0"
+    "prisma": "^5.19.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
