--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.19.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4",
     "prisma": "^5.19.0",
