--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.25.4",
+    "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0"
   }
